--- a/front/back-office-angular/src/app/products/product-list/product-list.component.css
+++ b/front/back-office-angular/src/app/products/product-list/product-list.component.css
@@ -1,6 +1,6 @@
 .table {
     border-collapse: separate;
-    border-spacing: 50px 0;
+    border-spacing: 40px 0;
     margin: 0 auto;
 }
 
@@ -12,4 +12,12 @@
 .th {
     padding: 10px 0;
     margin: 10px 0;
+}
+
+.imgD {
+    margin: 1px;
+}
+
+.divFlags {
+     margin: 1px;   
 }
