--- a/front/back-office-angular/src/app/customers/customer-list/customer-list.component.css
+++ b/front/back-office-angular/src/app/customers/customer-list/customer-list.component.css
@@ -1,9 +1,3 @@
-.p1{
-    font-weight: bold;
-    font-style: italic;
-    margin: 30px;
-    padding: 10px;
-}
 .table {
     border-collapse: separate;
     border-spacing: 40px 0;
@@ -18,6 +12,13 @@
 .th {
     padding: 10px 0;
     margin: 10px 0;
+}
+
+.col-md-2{
+    font-weight: bold;
+    font-style: italic;
+    padding:0.5em;
+    text-indent:5em
 }
 
 
